# simultaneousness-analysis

./: .gitignore  README.md  main.py  pyproject.toml
src/simultaneousness_analysis/: data_exploration.ipynb  main.py  retrieve_data_from_dwd_cdc.py
tests/: test_main.py
